--- a/webpage/package.json
+++ b/webpage/package.json
@@ -9,11 +9,13 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "autoprefixer": "10.4.17",
+    "dayjs": "^1.11.11",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.12.7",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
