--- a/webpage/package.json
+++ b/webpage/package.json
@@ -11,9 +11,11 @@
     "autoprefixer": "10.4.17",
     "dayjs": "^1.11.11",
     "geist": "^1.2.1",
+    "mobile-detect": "^1.4.5",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "recharts": "^2.12.7",
     "tailwindcss": "3.4.1",
